Fri Jun 23 19:58:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Added include for non-inline builds.

Fri Jun 23 19:38:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.h:
          Removed extra semi-colon.

Fri Jun 23 19:36:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
          Added protection for singlethread builds.

Fri Jun 24 11:42:43 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * ACE-INSTALL.html:

          Added notes about testing and developing autotool support, and
          how to bootstrap that support into a workspace.

Fri Jun 24 11:36:26 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * ace/Array_Map.cpp:
        * ace/Array_Map.inl:

          Added missing "typename" keyword before template parameter
          dependent types.  Addresses VC++ 7.1/8 and Sun CC++ compile-time
          warnings and errors.

Fri Jun 24 11:02:06 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/PerlACE/Process_Win32.pm:

          Fixed this module to work with the ACE_TEST_WINDOW environment
          variable that I added some time back.

Fri Jun 23 13:36:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Fixed unused 'result' variable in ACE_OS::event_init().

Fri Jun 23 13:00:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
          Fixes for compile errors on Linux 64bit.

Fri Jun 23 10:20:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Made sure ETIME is always returned on timeouts of
          ACE_OS::sema_timedwait and not ETIMEDOUT.

        * tests/Semaphore_Test.cpp:
          Extended platform coverage of timeout tests.

        * tests/Auto_Event_Test.cpp: