@@ -2,6 +2,11 @@
 ##
 ## $Id$
 ##
+## This file was generated by MPC.  Any changes made directly to
+## this file will be lost the next time it is generated.
+##
+## MPC Command:
+## ./bin/mwc.pl -include /home/jtc/ACE/ACE-config3/MPC/config -include /home/jtc/ACE/ACE-config3/MPC/templates -type automake ACE.mwc
 
 includedir = @includedir@/ace/RMCast
 pkgconfigdir = @libdir@/pkgconfig
@@ -10,7 +15,6 @@ ACE_BUILDDIR = $(top_builddir)
 ACE_ROOT = $(top_srcdir)
 
 
-## Makefile.RMCast.am
 
 if BUILD_THREADS
 
@@ -23,8 +27,10 @@ libACE_RMCast_la_CPPFLAGS = \
 
 libACE_RMCast_la_SOURCES = \
   Acknowledge.cpp \
+  Fragment.cpp \
   Link.cpp \
   Protocol.cpp \
+  Reassemble.cpp \
   Retransmit.cpp \
   Simulator.cpp \
   Socket.cpp \
@@ -39,9 +45,11 @@ libACE_RMCast_la_LIBADD = \
 nobase_include_HEADERS = \
   Acknowledge.h \
   Bits.h \
+  Fragment.h \
   Link.h \
   Protocol.h \
   RMCast_Export.h \
+  Reassemble.h \
   Retransmit.h \
   Simulator.h \
   Socket.h \
